<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
  <PreferenceCategory android:title="@string/pref_category_layout">
    <juloo.keyboard2.fork.prefs.LayoutsPreference/>
    <CheckBoxPreference android:key="auto_load_external_layouts" android:title="Auto-load layouts from directory" android:summary="Automatically load XML layouts from external directory on every keyboard refresh" android:defaultValue="true"/>
    <PreferenceScreen android:title="@string/pref_extra_keys_title">
      <PreferenceCategory android:title="@string/pref_extra_keys_custom">
        <juloo.keyboard2.fork.prefs.CustomExtraKeysPreference/>
      </PreferenceCategory>
      <juloo.keyboard2.fork.prefs.ExtraKeysPreference android:title="@string/pref_extra_keys_internal"/>
    </PreferenceScreen>
    <ListPreference android:key="number_row" android:title="@string/pref_number_row_title" android:summary="%s" android:defaultValue="no_number_row" android:entries="@array/pref_show_number_row_entries" android:entryValues="@array/pref_show_number_row_values"/>
    <ListPreference android:key="show_numpad" android:title="@string/pref_show_numpad_title" android:summary="%s" android:defaultValue="1" android:entries="@array/pref_show_numpad_entries" android:entryValues="@array/pref_show_numpad_values"/>
    <ListPreference android:key="numpad_layout" android:title="@string/pref_numpad_layout" android:summary="%s" android:defaultValue="high_first" android:entries="@array/pref_numpad_layout_entries" android:entryValues="@array/pref_numpad_layout_values"/>
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/pref_category_typing">
    <ListPreference android:key="swipe_dist" android:title="@string/pref_swipe_dist_title" android:summary="@string/pref_swipe_dist_summary" android:defaultValue="15" android:entries="@array/pref_swipe_dist_entries" android:entryValues="@array/pref_swipe_dist_values"/>
    <ListPreference android:key="circle_sensitivity" android:title="@string/pref_circle_sensitivity_title" android:summary="%s" android:defaultValue="2" android:entries="@array/pref_circle_sensitivity_entries" android:entryValues="@array/pref_circle_sensitivity_values"/>
    <juloo.keyboard2.fork.prefs.IntSlideBarPreference android:key="longpress_timeout" android:title="@string/pref_long_timeout_title" android:summary="%sms" android:defaultValue="600" min="50" max="2000"/>
    <CheckBoxPreference android:key="keyrepeat_enabled" android:title="@string/pref_keyrepeat_enabled" android:defaultValue="true"/>
    <juloo.keyboard2.fork.prefs.IntSlideBarPreference android:key="longpress_interval" android:dependency="keyrepeat_enabled" android:title="@string/pref_long_interval_title" android:summary="%sms" android:defaultValue="25" min="5" max="100"/>
    <CheckBoxPreference android:key="lock_double_tap" android:title="@string/pref_lock_double_tap_title" android:summary="@string/pref_lock_double_tap_summary" android:defaultValue="false"/>
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/pref_category_behavior">
    <CheckBoxPreference android:key="autocapitalisation" android:title="@string/pref_autocapitalisation_title" android:summary="@string/pref_autocapitalisation_summary" android:defaultValue="false"/>
    <CheckBoxPreference android:key="switch_input_immediate" android:title="@string/pref_switch_input_immediate_title" android:summary="@string/pref_switch_input_immediate_summary" android:defaultValue="false"/>
    <CheckBoxPreference android:key="vibrate_custom" android:title="@string/pref_vibrate_custom" android:defaultValue="false"/>
    <juloo.keyboard2.fork.prefs.IntSlideBarPreference android:dependency="vibrate_custom" android:key="vibrate_duration" android:title="@string/pref_vibrate_duration_title" android:summary="%sms" android:defaultValue="20" min="0" max="100"/>
    <ListPreference android:key="number_entry_layout" android:title="@string/pref_number_entry_title" android:summary="%s" android:defaultValue="pin" android:entries="@array/pref_number_entry_entries" android:entryValues="@array/pref_number_entry_values"/>
    <CheckBoxPreference android:key="floating_debug_mode" android:title="Floating Keyboard Debug" android:summary="Show debug toasts for floating keyboard interactions" android:defaultValue="false"/>
    <CheckBoxPreference android:key="keyboard_persistence_enabled" android:title="Keyboard Persistence" android:summary="Keep floating keyboard visible even when no text field is focused" android:defaultValue="false"/>
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/pref_category_style">
    <ListPreference android:key="theme" android:title="@string/pref_theme" android:summary="%s" android:defaultValue="nord" android:entries="@array/pref_theme_entries" android:entryValues="@array/pref_theme_values"/>
    <ListPreference android:key="font" android:title="@string/pref_font_title" android:summary="%s" android:defaultValue="fira_code" android:entries="@array/pref_font_entries" android:entryValues="@array/pref_font_values"/>
    <juloo.keyboard2.fork.prefs.IntSlideBarPreference android:key="label_brightness" android:title="@string/pref_label_brightness" android:summary="%s%%" android:defaultValue="100" min="50" max="100"/>
    <juloo.keyboard2.fork.prefs.IntSlideBarPreference android:key="keyboard_opacity" android:title="@string/pref_keyboard_opacity" android:summary="%s%%" android:defaultValue="0" min="0" max="100"/>
    <juloo.keyboard2.fork.prefs.IntSlideBarPreference android:key="key_opacity" android:title="@string/pref_key_opacity" android:summary="%s%%" android:defaultValue="100" min="0" max="100"/>
    <juloo.keyboard2.fork.prefs.IntSlideBarPreference android:key="key_activated_opacity" android:title="@string/pref_key_activated_opacity" android:summary="%s%%" android:defaultValue="100" min="0" max="100"/>
    <PreferenceScreen android:title="@string/pref_margin_bottom_title">
      <juloo.keyboard2.fork.prefs.IntSlideBarPreference android:key="margin_bottom_portrait" android:title="@string/pref_portrait" android:summary="%sdp" android:defaultValue="0" min="0" max="100"/>
      <juloo.keyboard2.fork.prefs.IntSlideBarPreference android:key="margin_bottom_landscape" android:title="@string/pref_landscape" android:summary="%sdp" android:defaultValue="0" min="0" max="100"/>
      <juloo.keyboard2.fork.prefs.IntSlideBarPreference android:key="margin_bottom_portrait_unfolded" android:title="@string/pref_portrait_unfolded" android:summary="%sdp" android:defaultValue="0" min="0" max="100"/>
      <juloo.keyboard2.fork.prefs.IntSlideBarPreference android:key="margin_bottom_landscape_unfolded" android:title="@string/pref_landscape_unfolded" android:summary="%sdp" android:defaultValue="0" min="0" max="100"/>
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/pref_keyboard_height_title">
      <juloo.keyboard2.fork.prefs.IntSlideBarPreference android:key="keyboard_height" android:title="@string/pref_portrait" android:summary="%s%%" android:defaultValue="30" min="10" max="100"/>
      <juloo.keyboard2.fork.prefs.IntSlideBarPreference android:key="keyboard_height_landscape" android:title="@string/pref_landscape" android:summary="%s%%" android:defaultValue="50" min="20" max="65"/>
      <juloo.keyboard2.fork.prefs.IntSlideBarPreference android:key="keyboard_height_unfolded" android:title="@string/pref_portrait_unfolded" android:summary="%s%%" android:defaultValue="30" min="10" max="50"/>
      <juloo.keyboard2.fork.prefs.IntSlideBarPreference android:key="keyboard_height_landscape_unfolded" android:title="@string/pref_landscape_unfolded" android:summary="%s%%" android:defaultValue="50" min="20" max="65"/>
    </PreferenceScreen>
    <PreferenceScreen android:title="Floating Keyboard Current State (Read-only)">
      <juloo.keyboard2.fork.prefs.StatusPreference android:key="floating_keyboard_current_dimensions" android:title="Current Dimensions" android:summary="Resize using keyboard drag"/>
      <juloo.keyboard2.fork.prefs.StatusPreference android:key="floating_keyboard_current_position" android:title="Current Position" android:summary="Move using keyboard drag"/>
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/pref_margin_top_title">
      <juloo.keyboard2.fork.prefs.IntSlideBarPreference android:key="margin_top_portrait" android:title="@string/pref_portrait" android:summary="%sdp" android:defaultValue="0" min="0" max="50"/>
      <juloo.keyboard2.fork.prefs.IntSlideBarPreference android:key="margin_top_landscape" android:title="@string/pref_landscape" android:summary="%sdp" android:defaultValue="0" min="0" max="50"/>
      <juloo.keyboard2.fork.prefs.IntSlideBarPreference android:key="margin_top_portrait_unfolded" android:title="@string/pref_portrait_unfolded" android:summary="%sdp" android:defaultValue="0" min="0" max="50"/>
      <juloo.keyboard2.fork.prefs.IntSlideBarPreference android:key="margin_top_landscape_unfolded" android:title="@string/pref_landscape_unfolded" android:summary="%sdp" android:defaultValue="0" min="0" max="50"/>
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/pref_horizontal_margin_title">
      <juloo.keyboard2.fork.prefs.IntSlideBarPreference android:key="horizontal_margin_portrait" android:title="@string/pref_portrait" android:summary="%sdp" android:defaultValue="0" min="0" max="30"/>
      <juloo.keyboard2.fork.prefs.IntSlideBarPreference android:key="horizontal_margin_landscape" android:title="@string/pref_landscape" android:summary="%sdp" android:defaultValue="0" min="0" max="200"/>
      <juloo.keyboard2.fork.prefs.IntSlideBarPreference android:key="horizontal_margin_portrait_unfolded" android:title="@string/pref_portrait_unfolded" android:summary="%sdp" android:defaultValue="0" min="0" max="30"/>
      <juloo.keyboard2.fork.prefs.IntSlideBarPreference android:key="horizontal_margin_landscape_unfolded" android:title="@string/pref_landscape_unfolded" android:summary="%sdp" android:defaultValue="0" min="0" max="200"/>
    </PreferenceScreen>
    <juloo.keyboard2.fork.prefs.SlideBarPreference android:key="character_size" android:title="@string/pref_character_size_title" android:summary="@string/pref_character_size_summary" android:defaultValue="0.66" min="0.3" max="1.5" step="0.1"/>
    <juloo.keyboard2.fork.prefs.SlideBarPreference android:key="main_label_size" android:title="@string/pref_main_label_size_title" android:summary="@string/pref_main_label_size_summary" android:defaultValue="0.66" min="0.3" max="2.0" step="0.1"/>
    <juloo.keyboard2.fork.prefs.SlideBarPreference android:key="sub_label_size" android:title="@string/pref_sub_label_size_title" android:summary="@string/pref_sub_label_size_summary" android:defaultValue="0.66" min="0.3" max="2.0" step="0.1"/>
    <juloo.keyboard2.fork.prefs.SlideBarPreference android:key="key_vertical_margin" android:title="@string/pref_key_vertical_space" android:summary="%.1f%%" android:defaultValue="1.5" min="0.0" max="5.0" step="0.1"/>
    <juloo.keyboard2.fork.prefs.SlideBarPreference android:key="key_horizontal_margin" android:title="@string/pref_key_horizontal_space" android:summary="%.1f%%" android:defaultValue="2.0" min="0.0" max="5.0" step="0.1"/>
    <CheckBoxPreference android:key="use_pixel_margins" android:title="@string/pref_use_pixel_margins_title" android:summary="@string/pref_use_pixel_margins_summary" android:defaultValue="true"/>
    <juloo.keyboard2.fork.prefs.SlideBarPreference android:key="key_vertical_margin_px" android:title="@string/pref_key_vertical_space_px" android:summary="%.1fpx" android:defaultValue="2.0" min="0.0" max="20.0" step="0.1" android:dependency="use_pixel_margins"/>
    <juloo.keyboard2.fork.prefs.SlideBarPreference android:key="key_horizontal_margin_px" android:title="@string/pref_key_horizontal_space_px" android:summary="%.1fpx" android:defaultValue="2.0" min="0.0" max="20.0" step="0.1" android:dependency="use_pixel_margins"/>
    <PreferenceScreen android:title="Floating Keyboard Window Management">
      <juloo.keyboard2.fork.prefs.IntSlideBarPreference android:key="snap_width_percent" android:title="Snap Width" android:summary="%s%% of screen width" android:defaultValue="50" min="25" max="100" step="5"/>
      <juloo.keyboard2.fork.prefs.IntSlideBarPreference android:key="snap_height_percent" android:title="Snap Height" android:summary="%s%% of screen height" android:defaultValue="40" min="15" max="80" step="5"/>
      <CheckBoxPreference android:key="snap_resize_enabled" android:title="Resize When Snapping" android:summary="Resize keyboard to snap dimensions, uncheck to keep current size" android:defaultValue="true"/>
      <CheckBoxPreference android:key="remember_floating_reenable_button_position" android:title="Remember Re-enable Button Position" android:summary="Remember the position of the floating re-enable button between sessions" android:defaultValue="true"/>
      <PreferenceScreen android:title="Floating Keyboard Position (Advanced)">
        <juloo.keyboard2.fork.prefs.IntSlideBarPreference android:key="floating_keyboard_x_portrait" android:title="X Position (Portrait)" android:summary="%spx from left" android:defaultValue="100" min="0" max="1500" step="10"/>
        <juloo.keyboard2.fork.prefs.IntSlideBarPreference android:key="floating_keyboard_y_portrait" android:title="Y Position (Portrait)" android:summary="%spx from top" android:defaultValue="300" min="0" max="3000" step="10"/>
        <juloo.keyboard2.fork.prefs.IntSlideBarPreference android:key="floating_keyboard_x_landscape" android:title="X Position (Landscape)" android:summary="%spx from left" android:defaultValue="100" min="0" max="3000" step="10"/>
        <juloo.keyboard2.fork.prefs.IntSlideBarPreference android:key="floating_keyboard_y_landscape" android:title="Y Position (Landscape)" android:summary="%spx from top" android:defaultValue="300" min="0" max="1500" step="10"/>
      </PreferenceScreen>
    </PreferenceScreen>
    <juloo.keyboard2.fork.prefs.IntSlideBarPreference android:key="keyboard_disabled_opacity" android:title="@string/pref_keyboard_disabled_opacity" android:summary="%s%%" android:defaultValue="0" min="0" max="100" step="1"/>
    <CheckBoxPreference android:key="border_config" android:title="@string/pref_border_config_title" android:defaultValue="true"/>
    <juloo.keyboard2.fork.prefs.IntSlideBarPreference android:key="custom_border_radius" android:title="@string/pref_corners_radius_title" android:summary="%s%%" android:defaultValue="8" min="0" max="100" android:dependency="border_config"/>
    <juloo.keyboard2.fork.prefs.SlideBarPreference android:key="custom_border_line_width" android:title="@string/pref_border_width_title" android:summary="%.1fdp" android:defaultValue="1.5" min="0.0" max="5.0" step="0.1" android:dependency="border_config"/>
  </PreferenceCategory>
  <PreferenceCategory android:title="Settings Backup">
    <Preference android:key="export_settings" android:title="Export Settings" android:summary="Save current settings to XML file"/>
    <Preference android:key="import_settings" android:title="Import Settings" android:summary="Load settings from XML file"/>
  </PreferenceCategory>
</PreferenceScreen>
